--- a/public/index.html
+++ b/public/index.html
@@ -116,7 +116,7 @@
 
 
 		<script src="https://code.jquery.com/jquery-1.12.4.min.js"></script>
-		<script src="https://cdn.socket.io/socket.io-1.4.5.js"></script>
+		<script src="/socket.io/socket.io.js"></script>
 		<script type="text/javascript" src="/assets/mdb/js/tether.min.js"></script>
 		<script type="text/javascript" src="/assets/mdb/js/bootstrap.min.js"></script>
 		<script type="text/javascript" src="/assets/mdb/js/mdb.min.js"></script>
