--- a/public/index.html
+++ b/public/index.html
@@ -68,6 +68,9 @@
 				</div>
 
 				<div class="col-sm-8 col-md-9">
+					<canvas id="drawing-canvas" style="width:100%;" width="100%" height="600">
+						CANVAS Y U NO WORKIN' :(
+					</canvas>
 					<div class="chat-message">
 						<ul class="chat">
 							<li class="left clearfix">
@@ -120,6 +123,12 @@
 		<script type="text/javascript" src="/assets/mdb/js/tether.min.js"></script>
 		<script type="text/javascript" src="/assets/mdb/js/bootstrap.min.js"></script>
 		<script type="text/javascript" src="/assets/mdb/js/mdb.min.js"></script>
+
+		<script type="text/javascript">
+			var socket = io.connect(window.location.origin);
+		</script>
+
 		<script src="/assets/chat/script.js"></script>
+		<script src="/assets/chat/drawing.js"></script>
 	</body>
 </html>
